--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             id="inputSecondURL" type="text" size="50" data-force-imageload><input type="file"
             data-image-target="inputSecondURL" /><span id="spanSecondPosition"></span><button id="btnPromptSecond" title="Generate with prompt">P</button><span id="spanPromptSecond" style="display:none;"> Prompt: <input id="inputPromptSecond" type="text" size="40" placeholder="Describe second image..."><button id="btnGenerateSecond" title="Generate second image">Generate</button></span></div>
     <div>ThirdImage: <input id="inputThirdURL" type="text" size="50" data-force-imageload><input type="file"
-            data-image-target="inputThirdURL" /><span id="spanThirdPosition"></span></div>
+            data-image-target="inputThirdURL" /><span id="spanThirdPosition"></span><button id="btnPromptThird" title="Generate with prompt">P</button><span id="spanPromptThird" style="display:none;"> Prompt: <input id="inputPromptThird" type="text" size="40" placeholder="Describe third image..."><button id="btnGenerateThird" title="Generate third image">Generate</button></span></div>
     <div>Pose: <input id="inputPose" step="1" type="number" min="0" max="30" data-force-imageload /><button
             title="chaos" onclick="randomizeInputByMinMax(inputPose, true); loadImagesAndRender()">c</button><span
-            id="spanPoses"></span><span id="spanPosesPosition"></span><button id="btnPromptPose" title="Generate with prompt">P</button><span id="spanPromptPose" style="display:none;"> Prompt: <input value="Using the provided image of a man in a suit, give him glasses. Ensure the man's face and features remain completely unchanged. The background has to be pitch black." id="inputPromptPose" type="text" size="40" placeholder="Describe pose edit..."><button id="btnGeneratePose" title="Generate pose image">Generate</button> <label title="Apply chroma key to pose"><input id="chkPoseMask" type="checkbox" checked> Mask</label> <button id="btnPoseSample" title="Sample key color from borders of pose">Sample</button> Color: <input id="inputPoseKeyColor" type="color" value="#ff66cc"> Tol: <input id="inputPoseTolerance" type="range" min="0" max="255" value="80"> Soft: <input id="inputPoseSoftness" type="range" min="0" max="255" value="60"></span><input id="inputPoseURL" type="hidden" data-force-imageload /></div>
+            id="spanPoses"></span><span id="spanPosesPosition"></span><button id="btnPromptPose" title="Generate with prompt">P</button><span id="spanPromptPose" style="display:none;"> Prompt: <textarea id="inputPromptPose" rows="4" cols="80" placeholder="Describe pose edit...">Using the provided image of a man in a suit, give him a magic hat. Ensure the man's face and features remain completely unchanged. The background has to be pitch black.</textarea><button id="btnGeneratePose" title="Generate pose image">Generate</button> <label title="Apply chroma key to pose"><input id="chkPoseMask" type="checkbox" checked> Mask</label> <button id="btnPoseSample" title="Sample key color from borders of pose">Sample</button> Color: <input id="inputPoseKeyColor" type="color" value="#ff66cc"> Tol: <input id="inputPoseTolerance" type="range" min="-1" max="255" value="80"> Soft: <input id="inputPoseSoftness" type="range" min="-1" max="255" value="60"></span><input id="inputPoseURL" type="hidden" data-force-imageload /></div>
     <div> Text1: <input id="inputText1" type="text"><span id="spanText1Position"></span></div>
     <div>Text2: <input id="inputText2" type="text"><span id="spanText2Position"></span></div>
+    <div>Canvas color: <input id="inputCanvasColor" type="color" value="#000000"></div>
 
     <button id="btnDownload">Download</button>
     <a id="btnDeeplink" href="">DeepLink</a>
@@ -179,7 +180,7 @@
         // background
         ctx.save();
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = colorBackground
+        ctx.fillStyle = (typeof inputCanvasColor !== 'undefined' && inputCanvasColor.value) ? inputCanvasColor.value : colorBackground
         ctx.fillRect(0, 0, canvas.width, canvas.height);
         ctx.restore()
     }
@@ -390,6 +391,9 @@
     btnPromptSecond.addEventListener('click', function () {
         spanPromptSecond.style.display = (spanPromptSecond.style.display === 'none' || !spanPromptSecond.style.display) ? 'inline' : 'none'
     })
+    btnPromptThird.addEventListener('click', function () {
+        spanPromptThird.style.display = (spanPromptThird.style.display === 'none' || !spanPromptThird.style.display) ? 'inline' : 'none'
+    })
 	// Toggle visibility for Pose prompt
 	btnPromptPose.addEventListener('click', function () {
 		spanPromptPose.style.display = (spanPromptPose.style.display === 'none' || !spanPromptPose.style.display) ? 'inline' : 'none'
@@ -401,6 +405,9 @@
     })
     inputPromptSecond.addEventListener('keydown', function (e) {
         if (e.key === 'Enter') { e.preventDefault(); btnGenerateSecond.click(); }
+    })
+    inputPromptThird.addEventListener('keydown', function (e) {
+        if (e.key === 'Enter') { e.preventDefault(); btnGenerateThird.click(); }
     })
 	// Enter in Pose prompt triggers Generate
 	inputPromptPose.addEventListener('keydown', function (e) {
@@ -437,6 +444,28 @@
 		this.disabled = true
 		this.textContent = '⏳'
         inputSecondURL.value = 'gemini://' + prompt
+		suspendPoseGeminiOnce = true
+		loadImagesAndRender()
+			.then(() => {
+				suspendPoseGeminiOnce = false
+				this.disabled = false
+				this.textContent = previousText
+			})
+			.catch(() => {
+				suspendPoseGeminiOnce = false
+				this.disabled = false
+				this.textContent = previousText
+			})
+	})
+
+    // Generate via Gemini for ThirdImage
+	btnGenerateThird.addEventListener('click', function () {
+		const prompt = inputPromptThird.value.trim()
+		if (!prompt) { return }
+		const previousText = this.textContent
+		this.disabled = true
+		this.textContent = '⏳'
+        inputThirdURL.value = 'gemini://' + prompt
 		suspendPoseGeminiOnce = true
 		loadImagesAndRender()
 			.then(() => {
