--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Free Youtube Thumbnail Generator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <style>
         img {
             border: 1px solid black;
@@ -31,7 +32,7 @@
     <header class="topbar">
         <div class="topbar__left">
             <img class="topbar__logo" src="img/favicon_small.png" alt="Werteherren" />
-            <span class="topbar__title">Free Youtube Thumbnail Generator 1.1</span>
+            <span class="topbar__title">Free Youtube Thumbnail Generator</span>
         </div>
         <div class="topbar__right">
             <a class="btn btn--primary" href="https://github.com/alexanderthurn/free-youtube-thumbnail-generator" target="_blank" rel="noopener">Github</a>
@@ -142,7 +143,7 @@
 
     <footer class="footer">
         <div class="footer__left">
-            <span>by </span>&nbsp;<a href="https://alexander-thurn.de" target="_blank" rel="noopener">Alexander Thurn </a>
+            <span>v1.1 by </span>&nbsp;<a href="https://alexander-thurn.de" target="_blank" rel="noopener">Alexander Thurn </a>
         </div>
         <div class="footer__right">
           </div>
