--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
                 <option value="2">Expert</option>
             </select>
             <label class="ui-level-2"><input type="checkbox" id="toggleReducedMotion"> Reduced motion</label>
-       
+            <div style="margin-top:6px;">
+                <label for="inputGeminiKey" title="Used if no .env key is present">Gemini key:</label>
+                <input id="inputGeminiKey" type="password" placeholder="Enter Gemini API key" autocomplete="off" style="width: 100%; max-width: 320px;">
+                <div style="margin-top:4px; font-size: 12px; opacity: 0.9;">
+                    No key yet? <a href="https://aistudio.google.com/api-keys" target="_blank" rel="noopener">Create one at Google AI Studio</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -287,14 +293,61 @@
 
     }
 
-	const loadImage = function (src) {
-		return new Promise((resolve, reject) => {
-			const img = new Image();
-			img.onload = () => resolve(img);
-			img.onerror = reject;
-			img.src = src;
-		})
-	}
+    // --- Gemini key handling ---
+    var serverHasGeminiKey = false
+    const getGeminiKey = function(){
+        try { return String(localStorage.getItem('geminiApiKey') || '') } catch(e) { return '' }
+    }
+    const setGeminiKey = function(v){
+        try { localStorage.setItem('geminiApiKey', String(v || '')) } catch(e) { /* ignore */ }
+    }
+    if (typeof inputGeminiKey !== 'undefined') {
+        try {
+            var storedKey = getGeminiKey()
+            if (storedKey) { inputGeminiKey.value = storedKey }
+        } catch(e) { /* ignore */ }
+        inputGeminiKey.addEventListener('input', function(){ setGeminiKey(this.value) })
+    }
+    // Probe backend for env key presence (no user key sent)
+    try {
+        fetch('./image.php?url=' + encodeURIComponent('gemini://check') + '&action=has_key')
+            .then(function(r){ return r.ok ? r.json() : { hasKey: false } })
+            .then(function(d){ serverHasGeminiKey = !!(d && d.hasKey) })
+            .catch(function(){ /* ignore */ })
+    } catch(e) { /* ignore */ }
+    const ensureGeminiKeyOrEnv = function(){
+        if (getGeminiKey()) return true
+        if (serverHasGeminiKey) return true
+        alert('A Gemini API key is required. Enter it under Gemini key.\nYou can create a key at https://aistudio.google.com/api-keys')
+        try { if (typeof inputGeminiKey !== 'undefined') { inputGeminiKey.focus() } } catch(e) { /* ignore */ }
+        return false
+    }
+
+    const loadImage = function (src) {
+        return new Promise((resolve, reject) => {
+            const needsHeader = /^\.?\/?image\.php(\?|$)/i.test(String(src || ''))
+            if (needsHeader) {
+                const headers = {}
+                const k = getGeminiKey()
+                if (k) { headers['X-Gemini-API-Key'] = k }
+                fetch(src, { headers })
+                    .then(r => { if (!r.ok) throw new Error('fetch failed: ' + r.status); return r.blob() })
+                    .then(b => {
+                        const url = URL.createObjectURL(b)
+                        const img = new Image()
+                        img.onload = () => { try { URL.revokeObjectURL(url) } catch(e){}; resolve(img) }
+                        img.onerror = reject
+                        img.src = url
+                    })
+                    .catch(reject)
+                return
+            }
+            const img = new Image();
+            img.onload = () => resolve(img);
+            img.onerror = reject;
+            img.src = src;
+        })
+    }
 
 
 	const loadImagesAndRender = function () {
@@ -790,9 +843,15 @@
 		return s
 	}
 	// Helper: fetch URL as base64 via same-origin (proxy when needed)
-	const fetchUrlAsBase64 = async function(s){
-		const u = ensureProxyUrl(s)
-		const r = await fetch(u)
+    const fetchUrlAsBase64 = async function(s){
+        const u = ensureProxyUrl(s)
+        const needsHeader = /^\.?\/?image\.php(\?|$)/i.test(String(u || ''))
+        const opts = {}
+        if (needsHeader) {
+            const k = getGeminiKey()
+            if (k) { opts.headers = { 'X-Gemini-API-Key': k } }
+        }
+        const r = await fetch(u, opts)
 		if (!r.ok) { throw new Error('fetch failed: ' + r.status) }
 		const b = await r.blob()
 		const mime = b.type || 'image/png'
@@ -807,7 +866,8 @@
 		})
 	}
 
-	btnGenerateBackground.addEventListener('click', async function () {
+    btnGenerateBackground.addEventListener('click', async function () {
+        if (!ensureGeminiKeyOrEnv()) { return }
 		const prompt = inputPromptBackground.value.trim()
 		if (!prompt) { return }
 		const previousText = this.textContent
@@ -847,7 +907,10 @@
 					fd.append('ref_third_data', base64)
 					fd.append('ref_third_mime', mime)
 				}
-				const res = await fetch('./image.php', { method: 'POST', body: fd })
+                const headers = {}
+                const k = getGeminiKey()
+                if (k) { headers['X-Gemini-API-Key'] = k }
+                const res = await fetch('./image.php', { method: 'POST', body: fd, headers })
 				const blob = await res.blob()
 				const objectUrl = URL.createObjectURL(blob)
 				inputBackgroundURL.value = objectUrl
@@ -902,7 +965,8 @@
 	})
 
     // Generate via Gemini for SecondImage
-	btnGenerateSecond.addEventListener('click', function () {
+    btnGenerateSecond.addEventListener('click', function () {
+        if (!ensureGeminiKeyOrEnv()) { return }
 		const prompt = inputPromptSecond.value.trim()
 		if (!prompt) { return }
 		const previousText = this.textContent
@@ -924,7 +988,8 @@
 	})
 
     // Generate via Gemini for ThirdImage
-	btnGenerateThird.addEventListener('click', function () {
+    btnGenerateThird.addEventListener('click', function () {
+        if (!ensureGeminiKeyOrEnv()) { return }
 		const prompt = inputPromptThird.value.trim()
 		if (!prompt) { return }
 		const previousText = this.textContent
@@ -1175,7 +1240,8 @@
     }
 
 	// Generate via Gemini for Pose (passes pose index to backend)
-	btnGeneratePose.addEventListener('click', function () {
+    btnGeneratePose.addEventListener('click', function () {
+        if (!ensureGeminiKeyOrEnv()) { return }
 		const prompt = inputPromptPose.value.trim()
 		if (!prompt) { return }
 		const previousText = this.textContent
